BusOne/src/objects/ChildAccount_TSF_vod__c.object
<CustomObject>
    <description>Territory information specific to the Child Account at the location of the Parent Account</description>
    <fields>
        <fullName>Child_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the child account for which the territory specific field is applied to.</description>
        <label>Child Account</label>
        <referenceTo>Child_Account_vod__c</referenceTo>
        <relationshipLabel>Child Account TSFs</relationshipLabel>
        <relationshipName>Child_Account_TSFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Target_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the account is specifically targeted in that territory.</description>
        <label>My Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>The name of the territory for which the territory specific fields of a child account are created for.</description>
        <label>Territory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Child Account TSF</label>
    <nameField>
        <label>Child Account TSF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Account TSFs</pluralLabel>
    <recordTypes>
        <fullName>Account_Location_vod</fullName>
        <active>true</active>
        <description>Page layout format for child account location</description>
        <label>Account_Location_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>